IDEA-203554 Fix look and feel cell renderer
GitOrigin-RevId: b9a8a74a6f78b0d55cb5500dc329cce6538770e2